gemfile, main page, and css cleanup

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,17 +9,18 @@
 <body>
   <div id="site">
     <div id="header">
-      Stop Repeating Yourself
+      <%= link_to "Stop Repeating Yourself", root_path %>
     </div> <!-- header -->
 
     <div id="main">
       <div id="sidebar">
         <ul>
-          <li>Sidebar Item 1</li>
-          <li>Sidebar Item 2</li>
-          <li>Sidebar Item 3</li>
-          <li>Sidebar Item 4</li>
-          <li>Sidebar Item 5</li>
+          <li><%= link_to "Sidebar Item 1", '/' %></li>
+          <li><%= link_to "Sidebar Item 2", '/' %></li>
+          <li><%= link_to "Sidebar Item 3", '/' %></li>
+          <li><%= link_to "Sidebar Item 4", '/' %></li>
+          <li><%= link_to "Sidebar Item 5", '/' %></li>
+          <li><%= link_to "Sidebar Item 6", '/' %></li>
         </ul>
       </div> <!-- sidebar -->
 
