--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,3 +1,12 @@
+html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, font, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  outline: 0;
+  font-size: 100%;
+  vertical-align: baseline;
+  background: transparent;
+}
 html {
   margin: 0;
   margin-bottom: 25px;
@@ -5,6 +14,7 @@ html {
   background-color: #FFF;
   font-family: "Helvetica", "Lucida Grande", "Bitstream Vera Sans", "Verdana", sans-serif;
   font-size: 13px;
+  line-height: 130%;
   color: #333;
   height: 100%;
 }
@@ -16,8 +26,8 @@ div#site {
 
 div#header {
   margin: auto;
-  border: 4px solid #BBCCFF;
-  background: #E3E9FF;
+  /*border: 4px solid #BBCCFF;
+  background: #E3E9FF;*/
   color: #FFF;
   line-height: 72px;
   width: 952px;
@@ -28,13 +38,11 @@ div#header {
   border-radius: 3px;
 }
 div#header a {
-  display: block;
-  color: #FF6900;
+  color: #BBCCFF;
   text-decoration: none;
 }
 div#header a:hover {
-  background: #FF6900;
-  color: #FFF;
+  color: #58595B;
 }
 
 div#main {
@@ -42,18 +50,47 @@ div#main {
 
 div#sidebar {
   float: left;
-  width: 240px;
-  text-align: center;
+  margin-top: 10px;
+  width: 220px;
+  text-align: left;
   margin-right: 10px;
+  line-height: 130%;
+  background: #FFF;
+  padding: 5px;
+  border: 1px solid #EFEFEF;
+}
+div#sidebar ul {
+  list-style: none;
 }
 div#sidebar li {
-  padding: 5px 0;
-  list-style-type: none;
+  zoom: 1;
+}
+#sidebar a {
+  background: left -300px no-repeat #F0EBE1;
+  display: block;
+  padding: 5px 10px 5px 7px;
+  margin: 0 0 4px 0;
+  font-family: KalicoScriptFat, Impact, Arial Narrow, Arial, sans-serif;
+  text-transform: uppercase;
+  color: #58595B;
+  height: 15px;
+  font-size: 16px;
+  text-decoration: none;
+}
+#sidebar a:hover {
+  color: #FFF;
+  background: #BBCCFF;
+  text-decoration: none;
 }
 
 div#yield {
   float: left;
   width: 700px;
+  min-height: 600px;
+  margin-top: 10px;
+  background: #FFF;
+  padding: 5px;
+  border: 1px solid #EFEFEF;
 }
 
 div#footer {
@@ -64,4 +101,3 @@ div#footer {
   font-size: 11px;
   text-align: center;
 }
-
