--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,8 +9,27 @@
 <body>
   <div id="site">
     <div id="header">
-      <%= link_to "Stop Repeating Yourself", root_path %>
+      <div id="logobox">
+        <div id="logo">
+          <%= link_to "Stop Repeating Yourself", "" %>
+        </div> <!-- logo -->
+      </div> <!-- logobox -->
+      <div id="name">
+        <%= link_to "SRY", root_path %>
+      </div> <!-- name -->
+      <div id="slogan">
+        <%= link_to "Stop Repeating Yourself", root_path %>
+      </div> <!-- name -->
+      <div id="topnav">
+        <ul>
+          <li><%= link_to "topnav 1", '/' %></li>
+          <li><%= link_to "topnav 2", '/' %></li>
+          <li><%= link_to "topnav 3", '/' %></li>
+          <li><%= link_to "topnav 4", '/' %></li>
+        </ul>
+      </div> <!-- links -->
     </div> <!-- header -->
+    <div style="clear:both"></div>
 
     <div id="main">
       <div id="sidebar">
