--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -14,7 +14,6 @@ html {
   background-color: #FFF;
   font-family: "Helvetica", "Lucida Grande", "Bitstream Vera Sans", "Verdana", sans-serif;
   font-size: 13px;
-  line-height: 130%;
   color: #333;
   height: 100%;
 }
@@ -25,24 +24,112 @@ div#site {
 }
 
 div#header {
-  margin: auto;
-  /*border: 4px solid #BBCCFF;
-  background: #E3E9FF;*/
+  margin: 20px auto;
   color: #FFF;
-  line-height: 72px;
+  line-height: 64px;
   width: 952px;
-  font-size: 36px;
+  height: 64px;
+  font-size: 32px;
   text-align: center;
-  -moz-border-radius: 3px;
-  -webkit-border-radius: 3px;
-  border-radius: 3px;
 }
-div#header a {
-  color: #BBCCFF;
+div#name {
+  margin: auto 10px;
+}
+div#name a {
+  color: #555;
   text-decoration: none;
 }
-div#header a:hover {
+div#name a:hover {
   color: #58595B;
+}
+div#slogan {
+  float: left;
+  height: 64px;
+  line-height: 52px;
+}
+div#slogan a {
+  color: #195A9A;
+  font-size: 12px;
+  text-transform: uppercase;
+  text-decoration: none;
+}
+div#slogan a:hover {
+  color: #58595B;
+}
+div#logobox {
+  width: 64px;
+  height: 64px;
+  float: left;
+}
+div#logo {
+  position: relative;
+  border-color: #0C5F0C;
+  text-align: center;
+  text-indent: -9000px;
+  font-size: 78px;
+  font-weight: bold;
+  color: white;
+  background: #138210;
+  -moz-box-shadow: 0 0 4px rgba(0, 0, 0, 0.4);
+  -webkit-box-shadow: 0 0 4px rgba(0, 0, 0, 0.4);
+  box-shadow: 0 0 4px rgba(0, 0, 0, 0.4);
+  background: -webkit-gradient(linear, left top, left bottom, from(#9A9B9D), to(#58595B));
+  background: -moz-linear-gradient(top, #9A9B9D, #58595B);
+  -webkit-border-radius: 30px;
+  -webkit-border-top-left-radius: 0;
+  -moz-border-radius: 30px;
+  -moz-border-radius-topleft: 0;
+  border-radius: 30px;
+  border-top-left-radius: 0;
+}
+#logo a {
+  text-decoration: none;
+}
+#logo a::after {
+  content: "o";
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 64px;
+  line-height: 58px;
+  text-indent: 0;
+  text-align: center;
+  font-size: 32px;
+  color: white;
+}
+div#name{
+  float: left;
+}
+div#topnav {
+  margin-top: 15px;
+  background: #DBDBDB;
+  float: right;
+  height: 36px;
+  line-height: 36px;
+  font-size: 12px;
+  border: 1px solid #AFB1B6;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+}
+#topnav ul {
+  list-style: none;
+}
+#topnav li {
+  width: 80px;
+  float: left;
+  display: inline;
+  border: 1px solid #AFB1B6;
+}
+#topnav ul li a {
+  text-decoration: none;
+  color: #58595B;
+  display: block;
+}
+#topnav ul li a:hover {
+  color: #98999B;
+  color: #195A9A;
+  background: #AFB1B6;
 }
 
 div#main {
@@ -50,7 +137,7 @@ div#main {
 
 div#sidebar {
   float: left;
-  margin-top: 10px;
+  margin-top: 24px;
   width: 220px;
   text-align: left;
   margin-right: 10px;
@@ -80,6 +167,7 @@ div#sidebar li {
 #sidebar a:hover {
   color: #FFF;
   background: #BBCCFF;
+  background: #195A9A;
   text-decoration: none;
 }
 
@@ -88,16 +176,21 @@ div#yield {
   width: 700px;
   min-height: 600px;
   margin-top: 10px;
+  margin-left: -24px;
   background: #FFF;
-  padding: 5px;
+  line-height: 130%;
+  padding: 17px;
   border: 1px solid #EFEFEF;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  border-radius: 10px;
 }
 
 div#footer {
-  margin: 10px auto;
-  padding-top: 5px;
-  border-top: 1px solid #BBCCFF;
-  color: #FF6900;
+  margin: auto;
+  padding: 5px 0;
+  border-top: 1px solid #195A9A;
+  color: #58595B;
   font-size: 11px;
   text-align: center;
 }
