Updated name to Project Speak Easy

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Stop Repeating Yourself - <%= yield(:title) || "Home" %></title> 
+  <title>Project Speak Easy - <%= yield(:title) || "Home" %></title> 
   <%= stylesheet_link_tag :all %>
   <%= javascript_include_tag :defaults %>
   <%= csrf_meta_tag %>
@@ -11,14 +11,14 @@
     <div id="header">
       <div id="logobox">
         <div id="logo">
-          <%= link_to "Stop Repeating Yourself", "" %>
+          <%= link_to "Project Speak Easy", "" %>
         </div> <!-- logo -->
       </div> <!-- logobox -->
       <div id="name">
-        <%= link_to "SRY", root_path %>
+        <%= link_to "PSE", root_path %>
       </div> <!-- name -->
       <div id="slogan">
-        <%= link_to "Stop Repeating Yourself", root_path %>
+        <%= link_to "Project Speak Easy", root_path %>
       </div> <!-- name -->
       <div id="topnav">
         <ul>
@@ -52,7 +52,7 @@
   </div> <!-- site -->
 
   <div id="footer">
-   &copy; Stop Repeating Yourself 
+   &copy; Project Speak Easy
   </div> <!-- footer -->
 </body>
 </html>
