--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,23 @@
   <%= stylesheet_link_tag :all %>
   <%= javascript_include_tag :defaults %>
   <%= csrf_meta_tag %>
+
+  <link  href="http://fonts.googleapis.com/css?family=Reenie+Beanie:regular"
+  rel="stylesheet" type="text/css" >
+  <style>
+    div#name{
+      font-family: 'Reenie Beanie', serif;
+      font-size: 62px;
+      font-style: normal;
+      font-weight: 700;
+      text-shadow: none;
+      text-decoration: none;
+      text-transform: none;
+      letter-spacing: -0.05em;
+      word-spacing: -0.099em;
+      line-height: 1.2;
+    }
+  </style>
 </head>
 <body>
   <div id="site">
@@ -22,10 +39,9 @@
       </div> <!-- name -->
       <div id="topnav">
         <ul>
-          <li><%= link_to "topnav 1", '/' %></li>
-          <li><%= link_to "topnav 2", '/' %></li>
-          <li><%= link_to "topnav 3", '/' %></li>
-          <li><%= link_to "topnav 4", '/' %></li>
+          <li><%= link_to "Home", '/' %></li>
+          <li><%= link_to "About", '/about' %></li>
+          <li><%= link_to "Contact", '/contact' %></li>
         </ul>
       </div> <!-- links -->
     </div> <!-- header -->
@@ -34,12 +50,8 @@
     <div id="main">
       <div id="sidebar">
         <ul>
-          <li><%= link_to "Sidebar Item 1", '/' %></li>
-          <li><%= link_to "Sidebar Item 2", '/' %></li>
-          <li><%= link_to "Sidebar Item 3", '/' %></li>
-          <li><%= link_to "Sidebar Item 4", '/' %></li>
-          <li><%= link_to "Sidebar Item 5", '/' %></li>
-          <li><%= link_to "Sidebar Item 6", '/' %></li>
+          <li><%= link_to "Sample Module", '/' %></li>
+          <li><%= link_to "Technology", '/' %></li>
         </ul>
       </div> <!-- sidebar -->
 
