--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -152,10 +152,10 @@ div#sidebar ul {
 div#sidebar li {
   zoom: 1;
 }
-#sidebar a {
+div#sidebar a {
   background: left -300px no-repeat #F0EBE1;
   display: block;
-  padding: 5px 10px 5px 7px;
+  padding: 4px 10px 5px 7px;
   margin: 0 0 4px 0;
   font-family: KalicoScriptFat, Impact, Arial Narrow, Arial, sans-serif;
   text-transform: uppercase;
@@ -164,7 +164,7 @@ div#sidebar li {
   font-size: 16px;
   text-decoration: none;
 }
-#sidebar a:hover {
+div#sidebar a:hover {
   color: #FFF;
   background: #BBCCFF;
   background: #195A9A;
