updated dates on about

--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -13,7 +13,7 @@
     <div class="bio">
       <div class="bio_name">Andrea Mire Holloway</div> <!-- bio_name -->
       <div class="bio_education">MEd - Texas State University (2010)</div> <!-- bio_education -->
-      <div class="bio_education">BA  Linguistics, French - University of Texas at Austin (2006)</div> <!-- bio_education -->
+      <div class="bio_education">BA  Linguistics, French - University of Texas at Austin (2007)</div> <!-- bio_education -->
 
       <div class="bio_blurb">
         In 2006, Andrea began helping people improve their communication abilities. She has taught English in the Czech Republic and Thailand, and worked with clients from every continent (except Antarctica). In her spare time, she enjoys romantic walks on the beach and plays a mean pinball.
@@ -22,7 +22,7 @@
 
     <div class="bio">
       <div class="bio_name">Seth Holloway</div> <!-- bio_name -->
-      <div class="bio_education">PhD ECE (Software Engineering Track) - University of Texas at Austin (Summer 2011)</div> <!-- bio_education -->
+      <div class="bio_education">PhD ECE (Software Engineering Track) - University of Texas at Austin (2011)</div> <!-- bio_education -->
       <div class="bio_education">MS ECE (Software Engineering Track) - University of Texas at Austin (2007)</div> <!-- bio_education -->
       <div class="bio_education">BS ECE - University of Texas at Austin (2005)</div> <!-- bio_education -->
 
