removed reference to application on about

--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -2,7 +2,7 @@
   <div id="about_pse">
     <h1>About Project Speak Easy</h1>
     <div class="bio_blurb">
-      This team of talented and hungry individuals have finally accepted the fact that their personal and professional happiness require that they satisfy their entrepreneurial passions. Regardless of the outcome of this application, we fully intend to launch a successful company by the end of this summer. Although, your help would definitely increase the odds of success!<br/>
+      This team of talented and hungry individuals have finally accepted the fact that their personal and professional happiness require that they satisfy their entrepreneurial passions.<br/>
       <br/>
       Our founder, Andrea, has over five years experiences as a small business owner specializing in one-on-one language services. She has a Bachelors in Linguistics and French and a Masters of Education and has been making a living as an accent modification specialist for five years. The techies, Seth and Shayne, are Software Engineering PhD students with diverse industrial experience. They’re web and mobile junkies with entrepreneurial experience and passion.<br/>
     </div> <!-- bio_blurb -->
