removed Mire from Andrea's name. swapped Shayne and Seth's ordering

--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -11,23 +11,12 @@
   <div id="about_us">
     <h1>About Us</h1>
     <div class="bio">
-      <div class="bio_name">Andrea Mire Holloway</div> <!-- bio_name -->
+      <div class="bio_name">Andrea Holloway</div> <!-- bio_name -->
       <div class="bio_education">MEd - Texas State University (2010)</div> <!-- bio_education -->
       <div class="bio_education">BA  Linguistics, French - University of Texas at Austin (2007)</div> <!-- bio_education -->
 
       <div class="bio_blurb">
         In 2006, Andrea began helping people improve their communication abilities. She has taught English in the Czech Republic and Thailand, and worked with clients from every continent (except Antarctica). In her spare time, she enjoys romantic walks on the beach and plays a mean pinball.
-      </div> <!-- bio_blurb -->
-    </div> <!-- bio -->
-
-    <div class="bio">
-      <div class="bio_name">Seth Holloway</div> <!-- bio_name -->
-      <div class="bio_education">PhD ECE (Software Engineering Track) - University of Texas at Austin (2011)</div> <!-- bio_education -->
-      <div class="bio_education">MS ECE (Software Engineering Track) - University of Texas at Austin (2007)</div> <!-- bio_education -->
-      <div class="bio_education">BS ECE - University of Texas at Austin (2005)</div> <!-- bio_education -->
-
-      <div class="bio_blurb">
-        Seth got a taste of success young, placing second in the Moore Elementary Recycling slogan contest at age 10. His slogan, “Please reduce, reuse, and recycle” has since been adopted by many groups royalty free. By high school, Seth began programming in competitions and writing epic “running man” animation loops in Pascal. Professionally, Seth has six years of industry experience between TI and IBM. He has worked with a variety of domains and technologies but particularly enjoys web and mobile computing. During graduate school Seth created several departmental web services, founded two organizations, published numerous scholarly articles, and created a novel aware home server that was interesting enough to convince five crotchety professors that he was smart.
       </div> <!-- bio_blurb -->
     </div> <!-- bio -->
 
@@ -39,6 +28,17 @@
 
       <div class="bio_blurb">
         Shayne has three years of software engineering experience at companies including Lockheed Martin and Morgan Stanley. He launched a web design company at the age of 16 called Halfbox, and more recently created his first iOS app which was featured on the iTunes store main page while simultaneously launching a massively scalable online chat service written in Erlang called Browse Out Loud. He has research experience in computer vision and signal processing algorithms, which will prove very useful when automating the voice recognition aspects of our system. Some people may not know that he was in fact born at the age of 3, and in his spare time he enjoys filling out seed start-up applications by writing them in the third person.
+      </div> <!-- bio_blurb -->
+    </div> <!-- bio -->
+
+    <div class="bio">
+      <div class="bio_name">Seth Holloway</div> <!-- bio_name -->
+      <div class="bio_education">PhD ECE (Software Engineering Track) - University of Texas at Austin (2011)</div> <!-- bio_education -->
+      <div class="bio_education">MS ECE (Software Engineering Track) - University of Texas at Austin (2007)</div> <!-- bio_education -->
+      <div class="bio_education">BS ECE - University of Texas at Austin (2005)</div> <!-- bio_education -->
+
+      <div class="bio_blurb">
+        Seth got a taste of success young, placing second in the Moore Elementary Recycling slogan contest at age 10. His slogan, “Please reduce, reuse, and recycle” has since been adopted by many groups royalty free. By high school, Seth began programming in competitions and writing epic “running man” animation loops in Pascal. Professionally, Seth has six years of industry experience between TI and IBM. He has worked with a variety of domains and technologies but particularly enjoys web and mobile computing. During graduate school Seth created several departmental web services, founded two organizations, published numerous scholarly articles, and created a novel aware home server that was interesting enough to convince five crotchety professors that he was smart.
       </div> <!-- bio_blurb -->
     </div> <!-- bio -->
   </div> <!-- about_us -->
