--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -107,7 +107,7 @@ div#topnav {
   height: 36px;
   line-height: 36px;
   font-size: 12px;
-  border: 1px solid #AFB1B6;
+  border: 1px solid #DBDBDB;
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
   border-radius: 3px;
@@ -119,17 +119,15 @@ div#topnav {
   width: 80px;
   float: left;
   display: inline;
-  border: 1px solid #AFB1B6;
 }
 #topnav ul li a {
   text-decoration: none;
-  color: #58595B;
+  color: #195A9A;
   display: block;
 }
 #topnav ul li a:hover {
-  color: #98999B;
   color: #195A9A;
-  background: #AFB1B6;
+  text-decoration: underline;
 }
 
 div#main {
