added sections for the problem, our approach, and how it works. updated wording from google doc

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,8 +50,9 @@
     <div id="main">
       <div id="sidebar">
         <ul>
-          <li><%= link_to "Sample Module", '/' %></li>
-          <li><%= link_to "Technology", '/' %></li>
+          <li><%= link_to "The Problem", '/problem' %></li>
+          <li><%= link_to "Our Approach", '/technology' %></li>
+          <li><%= link_to "How it Works", '/module' %></li>
         </ul>
       </div> <!-- sidebar -->
 
