--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,10 +1,11 @@
 <div id="about">
   <div id="about_pse">
-    <h1>About Project Speak Easy</h1>
+    <h1>Our Story</h1>
     <div class="bio_blurb">
       This team of talented and hungry individuals have finally accepted the fact that their personal and professional happiness require that they satisfy their entrepreneurial passions.<br/>
       <br/>
-      Our founder, Andrea, has over five years experiences as a small business owner specializing in one-on-one language services. She has a Bachelors in Linguistics and French and a Masters of Education and has been making a living as an accent modification specialist for five years. The techies, Seth and Shayne, are Software Engineering PhD students with diverse industrial experience. They’re web and mobile junkies with entrepreneurial experience and passion.<br/>
+      Our founder, Andrea, has over five years experiences as a small business owner specializing in one-on-one language services. She has a Bachelors in Linguistics and French and a Masters of Education and has been making a living as an accent modification specialist for five years. The techies, Seth and Shayne, are Software Engineering PhD students at UT Austin with diverse industrial experience. They’re web and mobile junkies with entrepreneurial experience and passion. This team of talented and hungry individuals have finally accepted the fact that their personal and professional happiness require that they satisfy their entrepreneurial passions. Regardless of the outcome of this application, we fully intend to launch a successful company by the end of this summer. Although, your help would definitely increase the odds of success!
+      <br/>
     </div> <!-- bio_blurb -->
   </div>
   <br/>
@@ -16,7 +17,7 @@
       <div class="bio_education">BA  Linguistics, French - University of Texas at Austin (2007)</div> <!-- bio_education -->
 
       <div class="bio_blurb">
-        In 2006, Andrea began helping people improve their communication abilities. She has taught English in the Czech Republic and Thailand, and worked with clients from every continent (except Antarctica). In her spare time, she enjoys romantic walks on the beach and plays a mean pinball.
+        In 2006, Andrea began helping people improve their communication abilities. She has taught English in the Czech Republic and Thailand, and worked with a variety of clients from every continent (except Antarctica) and she is a member of the TESOL (Teachers of English to Speakers of Other Languages). In her spare time, she enjoys romantic walks on the beach and plays a mean pinball.
       </div> <!-- bio_blurb -->
     </div> <!-- bio -->
 
@@ -27,7 +28,7 @@
       <div class="bio_education">BS CS - University of Central Florida (2006)</div> <!-- bio_education -->
 
       <div class="bio_blurb">
-        Shayne has three years of software engineering experience at companies including Lockheed Martin and Morgan Stanley. He launched a web design company at the age of 16 called Halfbox, and more recently created his first iOS app which was featured on the iTunes store main page while simultaneously launching a massively scalable online chat service written in Erlang called Browse Out Loud. He has research experience in computer vision and signal processing algorithms, which will prove very useful when automating the voice recognition aspects of our system. Some people may not know that he was in fact born at the age of 3, and in his spare time he enjoys filling out seed start-up applications by writing them in the third person.
+        Shayne, who was born at age three, has three years of software engineering experience at companies including Lockheed Martin and Morgan Stanley. He launched a web design company at the age of 16 called Halfbox, and more recently created his first iOS app which was featured on the iTunes store main page while simultaneously launching a massively scalable online chat service written in Erlang called Browse Out Loud. He has research experience in computer vision and signal processing algorithms, which will prove very useful when automating the voice recognition aspects of our system. 
       </div> <!-- bio_blurb -->
     </div> <!-- bio -->
 
@@ -38,7 +39,7 @@
       <div class="bio_education">BS ECE - University of Texas at Austin (2005)</div> <!-- bio_education -->
 
       <div class="bio_blurb">
-        Seth got a taste of success young, placing second in the Moore Elementary Recycling slogan contest at age 10. His slogan, “Please reduce, reuse, and recycle” has since been adopted by many groups royalty free. By high school, Seth began programming in competitions and writing epic “running man” animation loops in Pascal. Professionally, Seth has six years of industry experience between TI and IBM. He has worked with a variety of domains and technologies but particularly enjoys web and mobile computing. During graduate school Seth created several departmental web services, founded two organizations, published numerous scholarly articles, and created a novel aware home server that was interesting enough to convince five crotchety professors that he was smart.
+        Seth got a taste of success young, placing second in the Moore Elementary Recycling slogan contest at age 10. His slogan, “Please reduce, reuse, and recycle” has since been adopted by many groups royalty free. By high school, Seth began programming in competitions and writing epic “running man” animation loops in Pascal. Professionally, Seth has six years of industry experience between TI and IBM. He has worked with a variety of domains and technologies but particularly enjoys web and mobile computing. During graduate school Seth created several departmental web services, founded two organizations, published numerous scholarly articles, and researched usability in smart homes/smart grids; ultimately, convincing five crotchety professors that he was smart.
       </div> <!-- bio_blurb -->
     </div> <!-- bio -->
   </div> <!-- about_us -->
