--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -51,13 +51,13 @@ div#slogan {
   line-height: 52px;
 }
 div#slogan a {
-  color: #195A9A;
+  color: #58595B;
   font-size: 12px;
   text-transform: uppercase;
   text-decoration: none;
 }
 div#slogan a:hover {
-  color: #58595B;
+  color: #195A9A;
 }
 div#logobox {
   width: 64px;
@@ -105,7 +105,7 @@ div#name{
 }
 div#topnav {
   margin-top: 15px;
-  background: #DBDBDB;
+  background: #F0EBE1;
   float: right;
   height: 36px;
   line-height: 36px;
@@ -118,19 +118,23 @@ div#topnav {
 #topnav ul {
   list-style: none;
 }
-#topnav li {
-  width: 80px;
+#topnav ul li {
+  width: 100px;
   float: left;
   display: inline;
 }
 #topnav ul li a {
   text-decoration: none;
-  color: #195A9A;
+  color: #58595B;
   display: block;
+  font-family: KalicoScriptFat, Impact, Arial Narrow, Arial, sans-serif;
+  text-transform: uppercase;
+  font-size: 16px;
 }
 #topnav ul li a:hover {
-  color: #195A9A;
-  text-decoration: underline;
+  color: #FFF;
+  background: #195A9A;
+  text-decoration: none;
 }
 
 div#main {
@@ -167,7 +171,6 @@ div#sidebar a {
 }
 div#sidebar a:hover {
   color: #FFF;
-  background: #BBCCFF;
   background: #195A9A;
   text-decoration: none;
 }
