--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -192,7 +192,7 @@ div#yield {
 }
 
 div#footer {
-  margin: auto;
+  margin: 10px auto;
   padding: 5px 0;
   border-top: 1px solid #195A9A;
   color: #58595B;
