--- a/app/views/home/contact.html.erb
+++ b/app/views/home/contact.html.erb
@@ -2,6 +2,6 @@
   <h1>Contact Project Speak Easy</h1>
   <p>
     Feel free to email us: 
-    admin<span class="noshow">|&hearts;|</span>@proj<span class="noshow">|&hearts;|</span>ect<span class="noshow">|&hearts;|</span>spea<span class="noshow">|&hearts;|</span>keasy<span class="noshow">|&hearts;|</span>
+    andrea.m.holloway<span class="noshow">|&hearts;|</span>@gmai<span class="noshow">|&hearts;|</span>l<span class="noshow">|&hearts;|</span>.com<span class="noshow">|&hearts;|</span>
   </p>
 </div> <!-- contact -->
