added users using devise and created a product scaffold

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -57,6 +57,9 @@
       </div> <!-- sidebar -->
 
       <div id="yield">
+        <div class="notice"><%= notice %></div>
+        <div class="alert"><%= alert %></div>
+
         <%= yield %>
       </div>
     </div> <!-- main -->
