added notice and alert class to css, fixed titles in existing pages, added email option in development environment

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,5 @@
+<% title "Home" %>
+
 <h1>English is a Global Language</h1>
 <div>
   One of the most important skills successful professionals, academics, entrepreneurs, and politicians posses is the ability to communicate effectively. English is a global language and it’s proliferating rapidly; however, the ability to productively speak the language, and thus communicate effectively, is not keeping pace. An implicit assumption to effective communication is that your message can be easily understood and convincingly conveyed. This is a worthy goal, but unfortunately it’s rare. With a flattening world, more and more people are experiencing the frustration of ineffective communication (e.g., outsourced tech support or a non-native Teaching Assistant).
