--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,6 +39,12 @@
       </div> <!-- name -->
       <div id="topnav">
         <ul>
+          <% if user_signed_in? %>
+          <li><%= link_to "Logout", destroy_user_session_path %></li>
+          <% else %>
+          <li><%= link_to "Login", new_user_session_path %></li>
+          <% end %>
+
           <li><%= link_to "Home", '/' %></li>
           <li><%= link_to "About", '/about' %></li>
           <li><%= link_to "Contact", '/contact' %></li>
