removed capital factory so ycombinator wont get mad

--- a/app/views/home/technology.html.erb
+++ b/app/views/home/technology.html.erb
@@ -9,7 +9,7 @@
   <br/>
 
   <div>
-    After the beta launch at the end of the Capital Factory program, we will expand our technical offering to include more intelligent automated functionality to reduce the human-in-the-loop footprint. We will create a voice recognition system that can accurately determine if an individual is pronouncing words correctly. Our backgrounds in algorithms and signal/image processing will allow us to deliver this technical differentiator to outpace competing services. This will also allow us to provide brick and mortar quality at internet scale, which will allow us to hit our lower pricepoint. Because practice is the most important factor in overall success, we will also include social media hooks for peer supported learning to keep clients engaged in the learning process on a daily basis.
+    After the beta launch at the end of the program, we will expand our technical offering to include more intelligent automated functionality to reduce the human-in-the-loop footprint. We will create a voice recognition system that can accurately determine if an individual is pronouncing words correctly. Our backgrounds in algorithms and signal/image processing will allow us to deliver this technical differentiator to outpace competing services. This will also allow us to provide brick and mortar quality at internet scale, which will allow us to hit our lower pricepoint. Because practice is the most important factor in overall success, we will also include social media hooks for peer supported learning to keep clients engaged in the learning process on a daily basis.
   </div>
 
   <br/>
