removed the word crotchety from the about page

--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -41,7 +41,7 @@
       <div class="bio_education">BS ECE - University of Texas at Austin (2005)</div> <!-- bio_education -->
 
       <div class="bio_blurb">
-        Seth got a taste of success young, placing second in the Moore Elementary Recycling slogan contest at age 10. His slogan, “Please reduce, reuse, and recycle” has since been adopted by many groups royalty free. By high school, Seth began programming in competitions and writing epic “running man” animation loops in Pascal. Professionally, Seth has six years of industry experience between TI and IBM. He has worked with a variety of domains and technologies but particularly enjoys web and mobile computing. During graduate school Seth created several departmental web services, founded two organizations, published numerous scholarly articles, and researched usability in smart homes/smart grids; ultimately, convincing five crotchety professors that he was smart.
+        Seth got a taste of success young, placing second in the Moore Elementary Recycling slogan contest at age 10. His slogan, “Please reduce, reuse, and recycle” has since been adopted by many groups royalty free. By high school, Seth began programming in competitions and writing epic “running man” animation loops in Pascal. Professionally, Seth has six years of industry experience between TI and IBM. He has worked with a variety of domains and technologies but particularly enjoys web and mobile computing. During graduate school Seth created several departmental web services, founded two organizations, published numerous scholarly articles, and researched usability in smart homes/smart grids; ultimately, convincing five professors that he was smart.
       </div> <!-- bio_blurb -->
     </div> <!-- bio -->
   </div> <!-- about_us -->
